test/spec_vectors/store/fail/module_18.wat
(module (memory 1) (func $type-value-empty (i32.const 0) (i32.store)))